--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
               <span class="tech-pill">StoreKit 2</span>
               <span class="tech-pill">iOS 17+</span>
             </div>
+            <a href="https://apps.apple.com/us/app/choreup-for-families/id6757204140" target="_blank" rel="noopener" class="project-link">
+              App Store
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M7 17 17 7"/><path d="M7 7h10v10"/></svg>
+            </a>
           </div>
 
           <!-- Lugares -->
