--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
               <span class="project-name">JSON Receipts</span>
               <span class="project-badge badge-live">Live</span>
             </div>
-            <p class="project-type">AI Receipt Processing API</p>
+            <p class="project-type">Receipt Processing API</p>
             <p class="project-desc">
-              Developer API that turns receipt photos into structured JSON using AI. Full SaaS with credit-based billing, webhooks, fraud detection, and enterprise-grade security.
+              Developer API that turns receipt photos into structured JSON using ML models. Full SaaS with credit-based billing, webhooks, fraud detection, and enterprise-grade security.
             </p>
             <div class="project-tech">
               <span class="tech-pill">Laravel</span>
@@ -100,6 +100,10 @@
               <span class="tech-pill">Stripe</span>
               <span class="tech-pill">Redis</span>
             </div>
+            <a href="https://jsonreceipts.com" target="_blank" rel="noopener" class="project-link">
+              jsonreceipts.com
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M7 17 17 7"/><path d="M7 7h10v10"/></svg>
+            </a>
           </div>
 
           <!-- ChoreUp -->
