--- a/index.html
+++ b/index.html
@@ -166,6 +166,9 @@
             <p class="fade-in">
               I care about clean architecture, reliable infrastructure, and code that the next person can actually read. No shortcuts. No over-engineering. Just the right amount of complexity for the problem at hand.
             </p>
+            <p class="fade-in">
+              I also recognise that AI is reshaping how software gets built. I actively integrate AI tools and workflows into my development process, not as a gimmick, but as a genuine force multiplier. Staying sharp means staying curious, and I'm always learning how to ship better work, faster.
+            </p>
           </div>
 
           <div class="fade-in">
@@ -176,7 +179,7 @@
               </div>
               <div class="stat">
                 <div class="stat-number">4</div>
-                <div class="stat-label">Production systems</div>
+                <div class="stat-label">My own production systems</div>
               </div>
               <div class="stat">
                 <div class="stat-number">Web + iOS</div>
